--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -27,7 +27,8 @@ jobs:
 
     - name: Lint the solution
       run: |
-        dotnet format --verify-no-changes
+        dotnet tool restore
+        dotnet dotnet-csharpier --check .
 
     - name: Build the solution
       run: |
