--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,12 +21,12 @@ repos:
         entry: dotnet tool restore
         files: ".config/dotnet-tools.json"
         pass_filenames: false
-      - id: standard-dotnet-format
-        name: Standard dotnet format
-        entry: dotnet format
-        pass_filenames: false
+      - id: csharpier
+        name: Run CSharpier on c# files
+        entry: dotnet tool run dotnet-csharpier
         language: system
-        files: "dotnet/"
+        types:
+          - c#
       - id: dotnet-unit-test
         name: Dotnet unit tests
         entry: make dotnet-unit-tests
