added integration tests

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,9 @@ repos:
         pass_filenames: false
         language: system
         files: "dotnet/"
+      - id: dotnet-integration-test
+        name: Dotnet integration tests
+        entry: make dotnet-integration-tests
+        pass_filenames: false
+        language: system
+        files: "dotnet/"
