feat(backend): Started SSE in api (#5)
* started sse

* fixing to align with standarD

* adding basic concurrency to workflows

* added implementations and tests

* adding benchmarks

* using csharpier

* adding custom pr template

* added integration tests

* adding documentation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,9 +27,15 @@ repos:
         language: system
         types:
           - c#
-      - id: standard-dotnet-format
-        name: Standard dotnet format
-        entry: dotnet format
+      - id: dotnet-unit-test
+        name: Dotnet unit tests
+        entry: make dotnet-unit-tests
+        pass_filenames: false
+        language: system
+        files: "dotnet/"
+      - id: dotnet-integration-test
+        name: Dotnet integration tests
+        entry: make dotnet-integration-tests
         pass_filenames: false
         language: system
         files: "dotnet/"
