--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -8,6 +8,10 @@ on:
     paths:
       - "dotnet/**"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,8 +27,13 @@ jobs:
 
     - name: Lint the solution
       run: |
-        dotnet format --verify-no-changes
+        dotnet tool restore
+        dotnet dotnet-csharpier --check .
 
     - name: Build the solution
       run: |
         dotnet build
+
+    - name: Test the solution
+      run: |
+        make dotnet-tests
