--- a/android/launcher/android/app/build.gradle
+++ b/android/launcher/android/app/build.gradle
@@ -45,8 +45,8 @@ android {
         applicationId "com.example.launcher"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 29 
+        targetSdkVersion 29 
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
