creating custom mapping object

--- a/infra/backend/backend.csproj
+++ b/infra/backend/backend.csproj
@@ -4,11 +4,16 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <NoWarn>CS8618</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Pulumi" Version="3.*" />
     <PackageReference Include="Pulumi.Aws" Version="6.*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\config-translator\config-translator.csproj" />
   </ItemGroup>
 
 </Project>
