fixing paths in build

--- a/.github/workflows/build-pulumi.yaml
+++ b/.github/workflows/build-pulumi.yaml
@@ -3,7 +3,7 @@ name: Build Pulumi IaC
 on:
   pull_request:
     paths:
-      - '/infra'
+      - 'infra/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
