--- a/.github/workflows/build-pulumi.yaml
+++ b/.github/workflows/build-pulumi.yaml
@@ -37,7 +37,7 @@ jobs:
     - uses: pulumi/actions@v3
       with:
         command: preview
-        stack-name: sotex-box/staging
+        stack-name: sotex/sotex-box/staging
         comment-on-pr: true
         github-token: ${{ secrets.GITHUB_TOKEN }}
       env:
