--- a/.github/workflows/build-pulumi.yaml
+++ b/.github/workflows/build-pulumi.yaml
@@ -40,5 +40,6 @@ jobs:
         stack-name: sotex/sotex-box/staging
         comment-on-pr: true
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        work-dir: infra/backend
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
