--- a/.github/workflows/build-pulumi.yaml
+++ b/.github/workflows/build-pulumi.yaml
@@ -41,5 +41,6 @@ jobs:
         comment-on-pr: true
         github-token: ${{ secrets.GITHUB_TOKEN }}
         work-dir: infra/backend
+        upsert: true
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
