--- a/.github/workflows/build-pulumi.yaml
+++ b/.github/workflows/build-pulumi.yaml
@@ -27,12 +27,16 @@ jobs:
         dotnet tool restore
         dotnet dotnet-csharpier --check .
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-north-1
+    - id: install-aws-cli
+      uses: unfor19/install-aws-cli-action@v1
+
+    - name: Add profile credentials to ~/.aws/credentials
+      env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile service-account
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY --profile service-account
 
     - uses: pulumi/actions@v3
       with:
