--- a/.gitignore
+++ b/.gitignore
@@ -623,3 +623,7 @@ app.*.map.json
 /android/launcher/android/app/debug
 /android/launcher/android/app/profile
 /android/launcher/android/app/release
+
+/android/sotex_box/android/app/debug
+/android/sotex_box/android/app/profile
+/android/sotex_box/android/app/release
