--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -70,6 +70,8 @@ nav:
     - Overview: repository/index.md
     - Dotnet:
       - Overview: repository/dotnet/index.md
+    - Android:
+      - Overview: repository/android/index.md
   - Observability:
     - Overview: observability/index.md
   - Benchmarks:
