--- a/.github/workflows/flutter-launcher.yaml
+++ b/.github/workflows/flutter-launcher.yaml
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
     paths:
-      - "android/launcher/**"
+      - "android/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
