--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,12 +16,14 @@ repos:
         entry: make py-export
         language: system
         files: 'pyproject.toml'
+
+      ## Dotnet checks
       - id: dotnet-tool-restore
         name: Install dotnet tools
         language: system
         entry: dotnet tool restore
-        files: ".config/dotnet-tools.json"
         pass_filenames: false
+        always_run: true
       - id: csharpier
         name: Run CSharpier on c# files
         entry: dotnet tool run dotnet-csharpier
@@ -40,3 +42,11 @@ repos:
         pass_filenames: false
         language: system
         files: "dotnet/"
+
+      ## Pulumi checks
+      - id: pulumi-preview
+        name: Run preview of the pulumi config as a dry run
+        entry: make pulumi-preview
+        pass_filenames: false
+        language: system
+        files: "infra/"
