--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -37,3 +37,20 @@ jobs:
     - name: Test the solution
       run: |
         make dotnet-tests
+
+    - name: Build the container for backend
+      run: |
+        make container-build-backend
+
+    - name: Login to GitHub Container Registry
+      # if: github.ref == 'refs/heads/main'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Push image to GitHub Container Registry
+      # if: github.ref == 'refs/heads/main'
+      run: |
+        make container-push-backend
