--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -51,7 +51,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Push image to GitHub Container Registry
+    - name: Push backend to GitHub Container Registry
       # if: github.ref == 'refs/heads/main'
       run: |
         make container-push-backend
