--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -44,7 +44,7 @@ jobs:
         make container-build-backend
 
     - name: Login to GitHub Container Registry
-      # if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
@@ -52,6 +52,8 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push backend to GitHub Container Registry
-      # if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main'
+      env:
+        GITHUB_SHA: ${{ github.sha }}
       run: |
         make container-push-backend
