feat(CI): Adding ci for building images and pushing to packages (#16)
* adding ci for building images and pushing to ghcr

* adding path check for running docker image rebuild

* fixing ci

* enabling CI only on main

* adding docs

* making lint run on push

* Revert "making lint run on push"

This reverts commit 588a2a021c739c3cf2f9b2d1d1cb3da45a6e98d7.

--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -7,6 +7,7 @@ on:
   pull_request:
     paths:
       - "dotnet/**"
+      - "distribution/docker/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -37,3 +38,22 @@ jobs:
     - name: Test the solution
       run: |
         make dotnet-tests
+
+    - name: Build the container for backend
+      run: |
+        make container-build-backend
+
+    - name: Login to GitHub Container Registry
+      if: github.ref == 'refs/heads/main'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Push backend to GitHub Container Registry
+      if: github.ref == 'refs/heads/main'
+      env:
+        GITHUB_SHA: ${{ github.sha }}
+      run: |
+        make container-push-backend
