--- a/.github/workflows/flutter-launcher.yaml
+++ b/.github/workflows/flutter-launcher.yaml
@@ -1,4 +1,4 @@
-name: Dotnet pipeline
+name: Flutter pipeline
 
 on:
   push:
@@ -15,40 +15,26 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        app:
+          - directory: "./android/launcher"
+            name: launcher
+          - directory: "./android/sotex_box"
+            name: box
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-
     - name: Setup Flutter
       uses: "subosito/flutter-action@v2.12.0"
       with:
         flutter-version: '3.19.1'
         channel: 'stable'
-
     - name: Format Flutter
-      run: dart format . --set-exit-if-changed -o json
-
-    - name: Resolve Dependencies Launcher
-      working-directory: "./android/launcher"
+      run: dart format ${{ matrix.app.directory }} --set-exit-if-changed -o json
+    - name: Resolve Dependencies ${{ matrix.app.name }}
+      working-directory: ${{ matrix.app.directory }}
       run: flutter pub get
-
-    - name: Resolve Dependencies Box
-      working-directory: "./android/sotex_box"
-      run: flutter pub get
-
-    - name: Lint Flutter Launcher
-      working-directory: "./android/launcher"
+    - name: Lint Flutter ${{ matrix.app.name }}
+      working-directory: ${{ matrix.app.directory }}
       run: flutter analyze --preamble --congratulate --fatal-warnings --fatal-infos
-
-    - name: Lint Flutter Box
-      working-directory: "./android/sotex_box"
-      run: flutter analyze --preamble --congratulate --fatal-warnings --fatal-infos
-
-    # - name: Build Flutter Launcher
-    #   working-directory: "./android/launcher"
-    #   run: flutter build apk
-
-    # - name: Build Flutter Box
-    #   working-directory: "./android/sotex_box"
-    #   run: flutter build apk
