feat(flutter-setup): flutter environment setup  (#14)
* feat: Flutter setup

* main.dart and .gitignore

* - Top level git ignore
- Make file commands
- Gradle build proper target version
- Flutter pre-commit hooks (analyze, format, test)
- Flutter CI

* - sotex box app
- docs
- pre-commit and make changes

* - Flutter CI

* - No need to have artifacts currently building through workflows. Local Runner might make sense here.

* - Changed CI path

* Review changes

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -585,3 +584,46 @@ Cargo.lock
 # Added by cargo
 
 /target
+
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+migrate_working_dir/
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.pub-cache/
+.pub/
+/build/
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/launcher/android/app/debug
+/android/launcher/android/app/profile
+/android/launcher/android/app/release
+
+/android/sotex_box/android/app/debug
+/android/sotex_box/android/app/profile
+/android/sotex_box/android/app/release
