correcting docker compose setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,22 +8,24 @@ services:
   prometheus:
     container_name: prometheus
     image: prom/prometheus:v2.50.1
-    userns_mode: keep-id
-    user: ${CURR_UID}:${CURR_GID}
-    network_mode: host
     volumes:
       - ./infra/config/prometheus:/etc/prometheus
-      - ./env/prometheus:/prometheus
+      - prometheus:/prometheus
+    ports:
+      - 9090:9090
 
   grafana:
     container_name: grafana
     image: grafana/grafana:10.2.4
-    user: ${CURR_UID}:${CURR_GID}
-    userns_mode: keep-id
-    network_mode: host
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
     volumes:
       - ./infra/config/grafana/provisioning:/etc/grafana/provisioning
-      - ./env/grafana:/var/lib/grafana
+      - grafana:/var/lib/grafana
+    ports:
+      - 3000:3000
+
+volumes:
+  grafana:
+  prometheus:
