--- a/infra/config/prometheus/prometheus.yml
+++ b/infra/config/prometheus/prometheus.yml
@@ -3,4 +3,4 @@ scrape_configs:
     scrape_interval: 10s
     static_configs:
       - targets:
-          - localhost:8080
+          - backend:8080
