--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ services:
   backend:
     container_name: backend
     image: ghcr.io/sotex-lab/sotex-box/backend:${COMMIT_SHA}
-    ports:
-      - 8080:8080
+    environment:
+      - DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE=false
 
   prometheus:
     container_name: prometheus
@@ -11,20 +11,37 @@ services:
     volumes:
       - ./infra/config/prometheus:/etc/prometheus
       - prometheus:/prometheus
-    ports:
-      - 9090:9090
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --web.console.libraries=/usr/share/prometheus/console_libraries
+      - --web.console.templates=/usr/share/prometheus/consoles
+      - --web.external-url=http://localhost:8000/prometheus/
 
   grafana:
     container_name: grafana
     image: grafana/grafana:10.2.4
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_AUTH_BASIC_ENABLED=false
+      - GF_SERVER_PROTOCOL=http
+      - GF_SERVER_DOMAIN=localhost:8000
+      - GF_SERVER_ROOT_URL=http://localhost:8000/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
     volumes:
       - ./infra/config/grafana/provisioning:/etc/grafana/provisioning
       - grafana:/var/lib/grafana
+
+  nginx:
+    container_name: nginx
+    image: nginx:1.25.4-alpine3.18
     ports:
-      - 3000:3000
+      - 8000:8000
+    volumes:
+      - ./infra/config/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./infra/config/nginx/gateway.conf:/etc/nginx/gateway.conf
 
 volumes:
   grafana:
