--- a/infra/config/grafana/provisioning/datasources/prometheus-datasource.yaml
+++ b/infra/config/grafana/provisioning/datasources/prometheus-datasource.yaml
@@ -2,6 +2,6 @@ apiVersion: 1
 datasources:
   - name: Prometheus
     type: prometheus
-    url: http://prometheus:9090
+    url: http://prometheus:9090/prometheus/
     access: proxy
     isDefault: true
