--- a/infra/config/nginx/gateway.conf
+++ b/infra/config/nginx/gateway.conf
@@ -1,4 +1,4 @@
-map $http_upgrade $connection_upgrade {
+map ${DOLLAR}http_upgrade ${DOLLAR}connection_upgrade {
 	default upgrade;
 	'' close;
 }
@@ -6,7 +6,7 @@ map $http_upgrade $connection_upgrade {
 server {
     access_log /var/log/nginx/api_access.log main;
 
-    listen 80 default_server;
+    listen ${NGINX_PORT} default_server;
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
@@ -22,7 +22,7 @@ server {
 		proxy_pass http://backend:8080;
 		proxy_buffering off;
     	proxy_cache off;
-    	proxy_set_header Host $host;
+    	proxy_set_header Host ${DOLLAR}host;
 	}
 
     location /prometheus {
@@ -31,14 +31,14 @@ server {
 
     location /grafana/ {
 		proxy_pass http://grafana:3000;
-		proxy_set_header Host $http_host;
+		proxy_set_header Host ${DOLLAR}http_host;
     }
 
 	location /grafana/api/live/ {
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
+        proxy_set_header Connection ${DOLLAR}connection_upgrade;
+        proxy_set_header Host ${DOLLAR}http_host;
         proxy_pass http://grafana:3000;
     }
 }
