--- a/infra/config/nginx/nginx.conf
+++ b/infra/config/nginx/nginx.conf
@@ -26,6 +26,6 @@ http {
 
     keepalive_timeout  65;
 
-    include /etc/nginx/gateway.conf; # All API gateway configuration
+    include /etc/nginx/apigateway.conf; # All API gateway configuration
     include /etc/nginx/conf.d/*.conf;    # Regular web traffic
 }
