--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
       - GF_SERVER_ROOT_URL=http://${DOMAIN_NAME}/grafana/
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - GF_LOG_LEVEL=warn
     volumes:
       - ./infra/config/grafana/provisioning:/etc/grafana/provisioning
     command:
