--- a/.github/workflows/pull-request-lint.yaml
+++ b/.github/workflows/pull-request-lint.yaml
@@ -5,6 +5,7 @@ on:
       - opened
       - edited
       - reopened
+  push:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
