adding synchronize to pr lint

--- a/.github/workflows/pull-request-lint.yaml
+++ b/.github/workflows/pull-request-lint.yaml
@@ -5,7 +5,7 @@ on:
       - opened
       - edited
       - reopened
-  push:
+      - synchronize
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
