feat(infra): adding nginx (#25)
* setting up nginx

* saving progress

* adding template

* docs

* added functionallity for the load test to have custom prefix

* adding results to docs

* fixing lint check

* adding synchronize to pr lint

* adding explaination for .env.template

--- a/.github/workflows/pull-request-lint.yaml
+++ b/.github/workflows/pull-request-lint.yaml
@@ -5,6 +5,7 @@ on:
       - opened
       - edited
       - reopened
+      - synchronize
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
