--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ services:
   backend:
     container_name: backend
     image: ghcr.io/sotex-lab/sotex-box/backend:${COMMIT_SHA}
-    ports:
-      - 8080:8080
+    environment:
+      - DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE=false
 
   prometheus:
     container_name: prometheus
@@ -11,20 +11,48 @@ services:
     volumes:
       - ./infra/config/prometheus:/etc/prometheus
       - prometheus:/prometheus
-    ports:
-      - 9090:9090
+    environment:
+      - DOMAIN_NAME=${DOMAIN_NAME}
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --web.console.libraries=/usr/share/prometheus/console_libraries
+      - --web.console.templates=/usr/share/prometheus/consoles
+      - --web.external-url=http://${DOMAIN_NAME}/prometheus/
 
   grafana:
     container_name: grafana
     image: grafana/grafana:10.2.4
     environment:
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_PROTOCOL=http
+      - GF_SERVER_DOMAIN=${DOMAIN_NAME}
+      - GF_SERVER_ROOT_URL=http://${DOMAIN_NAME}/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - GF_LOG_LEVEL=warn
     volumes:
       - ./infra/config/grafana/provisioning:/etc/grafana/provisioning
-      - grafana:/var/lib/grafana
+    command:
+      - "sh"
+      - "\"-c\""
+      - "grafana-cli admin reset-admin-password ${GF_SECURITY_ADMIN_PASSWORD} && /run.sh"
+
+  nginx:
+    container_name: nginx
+    image: nginx:1.25.4-alpine3.18
+    environment:
+      - NGINX_PORT=${NGINX_PORT}
+      - DOLLAR=$
     ports:
-      - 3000:3000
+      - ${NGINX_PORT}:${NGINX_PORT}
+    volumes:
+      - ./infra/config/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./infra/config/nginx/gateway.conf:/etc/nginx/gateway.conf.template
+    command:
+      - sh
+      - -c
+      - "envsubst < /etc/nginx/gateway.conf.template > /etc/nginx/apigateway.conf && cat /etc/nginx/apigateway.conf && nginx -g 'daemon off;'"
 
 volumes:
   grafana:
