--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,8 @@ DOMAIN_NAME=localhost:8000
 # `DOMAIN_NAME` have to be the same for all parts of
 # the stack to work properly
 NGINX_PORT=8000
+
+# Connection string for database. Locally you can leave
+# this password since it is configured to run against
+# a local stack.
+CONNECTION_STRING="Host=postgres;Username=postgres;Password=postgres;Database=postgres"
