--- a/distribution/local/docker-compose.dev.yaml
+++ b/distribution/local/docker-compose.dev.yaml
@@ -1,6 +1,6 @@
 services:
   backend:
-    depends_on:
+    links:
       - minio
       - postgres
 
@@ -20,6 +20,10 @@ services:
       - /data
       - --console-address
       - :9001
+    healthcheck:
+      test: mc ready local
+      interval: 10s
+      timeout: 3s
 
   postgres:
     container_name: postgres
@@ -30,6 +34,11 @@ services:
       - 5432:5432
     volumes:
       - postgres:/var/lib/postgresql/data/
+    healthcheck:
+      test: pg_isready -d postgres
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   pgadmin:
     container_name: pgadmin
