--- a/dotnet/model/model.csproj
+++ b/dotnet/model/model.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="automapper" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
