--- a/dotnet/backend/backend.csproj
+++ b/dotnet/backend/backend.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Process" Version="0.5.0-beta.4" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="system.linq.async" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
