--- a/dotnet/integration-tests/integration-tests.csproj
+++ b/dotnet/integration-tests/integration-tests.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageReference Include="respawn" Version="6.2.1" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="Testcontainers" Version="3.7.0" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="3.7.0" />
