started work on s3 integration

--- a/.env.template
+++ b/.env.template
@@ -18,3 +18,20 @@ NGINX_PORT=8000
 # this password since it is configured to run against
 # a local stack.
 CONNECTION_STRING="Host=postgres;Username=postgres;Password=postgres;Database=postgres"
+
+# Url to connect to s3. Locally it should be like this
+# since we use minio to mock s3.
+AWS_URL=http://minio:9000
+
+# Region to use for s3. Locally it can be left as is.
+AWS_REGION="localhost"
+
+# Access key for s3. It is created when the s3 is
+# provisioned. For local development can be left
+# as is since they represent minio username
+AWS_ACCESS_KEY="admin"
+
+# Secret key for s3. It is created when the s3 is
+# provisioned. For local development can be left
+# as is since they represent minio password
+AWS_SECRET_KEY="admin123"
