--- a/.env.template
+++ b/.env.template
@@ -21,7 +21,7 @@ CONNECTION_STRING="Host=postgres;Username=postgres;Password=postgres;Database=po
 
 # Url to connect to s3. Locally it should be like this
 # since we use minio to mock s3.
-AWS_URL=http://minio:9000
+AWS_URL="http://minio:9000"
 
 # Region to use for s3. Locally it can be left as is.
 AWS_REGION="localhost"
@@ -35,3 +35,8 @@ AWS_ACCESS_KEY="admin"
 # provisioned. For local development can be left
 # as is since they represent minio password
 AWS_SECRET_KEY="admin123"
+
+# Aws protocol to use to generate presigned urls.
+# For production it should be https. For dev it
+# should be http.
+AWS_PROTOCOL="http"
