--- a/distribution/local/docker-compose.dev.yaml
+++ b/distribution/local/docker-compose.dev.yaml
@@ -14,6 +14,7 @@ services:
     environment:
       - MINIO_ROOT_USER=admin
       - MINIO_ROOT_PASSWORD=admin123
+      - MINIO_DEFAULT_BUCKETS='pre-processed'
     ports:
       - 9000:9000
       - 9001:9001
