--- a/.env.template
+++ b/.env.template
@@ -20,8 +20,10 @@ NGINX_PORT=8000
 CONNECTION_STRING="Host=postgres;Username=postgres;Password=postgres;Database=postgres"
 
 # Url to connect to s3. Locally it should be like this
-# since we use minio to mock s3.
-AWS_URL="http://minio:9000"
+# since we use minio to mock s3. Even if we are in the
+# docker environment, in code we setup a proxy for minio
+# on correct urls.
+AWS_URL="http://localhost:9000"
 
 # Region to use for s3. Locally it can be left as is.
 AWS_REGION="localhost"
