--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,8 @@ services:
     image: ghcr.io/sotex-lab/sotex-box/backend:${COMMIT_SHA}
     environment:
       - DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE=false
-      - CONNECTION_STRING=${CONNECTION_STRING}
-      - AWS_URL=${AWS_URL}
-      - AWS_REGION=${AWS_REGION}
-      - AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
-      - AWS_SECRET_KEY=${AWS_SECRET_KEY}
-      - AWS_PROTOCOL=${AWS_PROTOCOL}
+    env_file:
+      - .env
 
   prometheus:
     container_name: prometheus
