feat(backend): Creating ad in non-processed bucket (#27)
* Creating a local stack for s3 and postgres

* saving progress

* adding repositories and base entities

* adding model and testcontainers

* fixing parallelism of integration tests

* reenabling fixed parallelism

* added ad controller

* fixing migration in integration tests

* adding basic ad actions

* started adding tests

* adding respawner for reseting database before tests

* started work on s3 integration

* more work on s3 presigned url

* started work on s3 integration

* integrated s3

* fixed tests

* fixing make file

* refactoring

* cleaning up docs

* ensure to delete ad if the object in bucket cannot be created due to some reason

* adding stage clarification

--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,32 @@ DOMAIN_NAME=localhost:8000
 # `DOMAIN_NAME` have to be the same for all parts of
 # the stack to work properly
 NGINX_PORT=8000
+
+# Connection string for database. Locally you can leave
+# this password since it is configured to run against
+# a local stack.
+CONNECTION_STRING="Host=postgres;Username=postgres;Password=postgres;Database=postgres"
+
+# Url to connect to s3. Locally it should be like this
+# since we use minio to mock s3. Even if we are in the
+# docker environment, in code we setup a proxy for minio
+# on correct urls.
+AWS_URL="http://localhost:9000"
+
+# Region to use for s3. Locally it can be left as is.
+AWS_REGION="localhost"
+
+# Access key for s3. It is created when the s3 is
+# provisioned. For local development can be left
+# as is since they represent minio username
+AWS_ACCESS_KEY="admin"
+
+# Secret key for s3. It is created when the s3 is
+# provisioned. For local development can be left
+# as is since they represent minio password
+AWS_SECRET_KEY="admin123"
+
+# Aws protocol to use to generate presigned urls.
+# For production it should be https. For dev it
+# should be http.
+AWS_PROTOCOL="http"
