--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ mkdocs = "^1.5.3"
 mkdocs-material = "^9.5.9"
 mkdocs-git-revision-date-localized-plugin = "^1.2.4"
 mkdocs-git-committers-plugin-2 = "^2.2.3"
+boto3 = "^1.34.63"
+flask = "^3.0.2"
+urllib3 = "1.26.18"
 
 
 [build-system]
