added updating of ad from sqs

--- a/.env.template
+++ b/.env.template
@@ -23,7 +23,7 @@ CONNECTION_STRING="Host=postgres;Username=postgres;Password=postgres;Database=po
 # since we use minio to mock s3. Even if we are in the
 # docker environment, in code we setup a proxy for minio
 # on correct urls.
-AWS_URL="http://localhost:9000"
+AWS_S3_URL="http://localhost:9000"
 
 # Region to use for s3. Locally it can be left as is.
 AWS_REGION="localhost"
@@ -31,14 +31,30 @@ AWS_REGION="localhost"
 # Access key for s3. It is created when the s3 is
 # provisioned. For local development can be left
 # as is since they represent minio username
-AWS_ACCESS_KEY="admin"
+AWS_S3_ACCESS_KEY="admin"
 
 # Secret key for s3. It is created when the s3 is
 # provisioned. For local development can be left
 # as is since they represent minio password
-AWS_SECRET_KEY="admin123"
+AWS_S3_SECRET_KEY="admin123"
 
 # Aws protocol to use to generate presigned urls.
 # For production it should be https. For dev it
 # should be http.
 AWS_PROTOCOL="http"
+
+# Url to connect to sqs. Locally it should be like this
+# since we use elasticmq to mock sqs.
+AWS_SQS_URL="http://sqs:9324"
+
+# Sqs access key to connect to the service. For local
+# development it can be left as 'x'
+AWS_SQS_ACCESS_KEY=x
+
+# Sqs secret key to connect to the service. For local
+# development it can be left as 'x'
+AWS_SQS_SECRET_KEY=x
+
+# Url of the queue to listen to for updates from the
+# users. For development leave as is
+AWS_SQS_NONPROCESSED_QUEUE_URL=/000000000000/nonprocessed
