--- a/dotnet/unit-tests/unit-tests.csproj
+++ b/dotnet/unit-tests/unit-tests.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\sse-handler\sse-handler.csproj" />
+    <ProjectReference Include="..\backend\backend.csproj" />
   </ItemGroup>
 
 </Project>
