--- a/dotnet/integration-tests/integration-tests.csproj
+++ b/dotnet/integration-tests/integration-tests.csproj
@@ -26,6 +26,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="yamldotnet" Version="15.1.2" />
   </ItemGroup>
 
   <ItemGroup>
