--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,12 +36,6 @@ repos:
         pass_filenames: false
         language: system
         files: "dotnet/"
-      - id: dotnet-integration-test
-        name: Dotnet integration tests
-        entry: make dotnet-integration-tests
-        pass_filenames: false
-        language: system
-        files: "dotnet/"
 
       ## Flutter checks
       - id: dart-format
@@ -60,10 +54,12 @@ repos:
         name: Flutter launcher tests
         entry: make flutter-test-launcher
         language: system
+        files: '\.(dart)$'
       - id: flutter-sotex_box-tests
         name: Flutter sotex_box tests
         entry: make flutter-test-box
         language: system
+        files: '\.(dart)$'
 
       ## Pulumi checks
       - id: pulumi-preview
