adding retry for migrations

--- a/dotnet/e2e-tester/e2e-tester.csproj
+++ b/dotnet/e2e-tester/e2e-tester.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="testcontainers" Version="3.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\backend\backend.csproj" />
+  </ItemGroup>
+
 </Project>
