--- a/dotnet/persistence/persistence.csproj
+++ b/dotnet/persistence/persistence.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNext" Version="5.2.0" />
+    <PackageReference Include="gdyrra.dotnet.retry" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
