--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ MANIFEST
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
+.mono
+
 # Environments
 .env
 .venv
