add default env variables for docker compose down to run normally

--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -37,6 +37,7 @@ jobs:
 
     - name: Test the solution
       run: |
+        cp .env.template .env
         make dotnet-tests
 
     - name: Build the container for backend
