adding optional checking of devices being registered

--- a/.env.template
+++ b/.env.template
@@ -58,3 +58,10 @@ AWS_SQS_SECRET_KEY=x
 # Url of the queue to listen to for updates from the
 # users. For development leave as is
 AWS_SQS_NONPROCESSED_QUEUE_URL=/000000000000/nonprocessed
+
+# Specifies wether backend will check if the device
+# exists in the database before allowing it to
+# connect. For development its easier to have this
+# at false but tests should cover it being at true
+# as well.
+REQUIRE_KNOWN_DEVICES=false
