--- a/infra/config/nginx/gateway.conf
+++ b/infra/config/nginx/gateway.conf
@@ -15,7 +15,7 @@ server {
 
     location / {
         mirror_request_body on;
-        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-For ${DOLLAR}remote_addr;
         proxy_pass http://backend:8080;
     }
 
