--- a/dotnet/e2e-tester/e2e-tester.csproj
+++ b/dotnet/e2e-tester/e2e-tester.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Alba.CsConsoleFormat" Version="1.0.0" />
     <PackageReference Include="Cocona" Version="2.2.0" />
-    <PackageReference Include="ConsoleTables" Version="2.6.1" />
     <PackageReference Include="respawn" Version="6.2.1" />
     <PackageReference Include="shouldly" Version="4.2.1" />
     <PackageReference Include="testcontainers" Version="3.7.0" />
